--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,9 @@
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   background: #646277;
   color: white;
   font-size: 13px;
   text-align: center;
   padding: 30px 0 20px;
+  margin-top: 20px;
 }
